Fixed for overflow when changed landscape/portrait mode

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,15 @@ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 /* https://twitter.com/AllThingsSmitty/status/1254151507412496384 */
-html,
-body,
+
 #root,
 .app {
-  height: 100vh;
-  height: -webkit-fill-available;
-  max-height: 100vh;
-  max-height: -webkit-fill-available;
+  min-height: 100vh;
 }
 
 body {
@@ -117,11 +115,12 @@ a {
 
 /* boardgame.io game board container */
 .bgio-client {
+  height: 100vh;
 }
 
 .game-board {
   height: 100vh;
-  height: -webkit-fill-available;
+  /*height: -webkit-fill-available;*/
   width: 480px;
   max-width: 94vw;
   box-sizing: border-box;
@@ -312,20 +311,20 @@ a {
  * src/Card.js
  */
 .card {
-  width: 100%;
   background-color: #fff;
   box-shadow: 0px 8px 16px -10px rgba(61, 61, 82, 1);
 
   color: #333;
 
   border-radius: 4px;
+  width: calc(100% - 36px); /* 2x padding */
   padding: 18px;
   text-align: center;
 
   display: flex;
   flex-direction: column;
 
-  position: relative; /* due to absoluted posited week no span  */
+  position: relative; /* due to absolutely positioned week no span  */
 }
 .card--incident,
 .card--effect {
